Update many things